--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "sourceMap": false,
     "declaration": true,
     "declarationMap": false,
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "noImplicitReturns": true,
