--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite dev",
+    "format": "prettier --write src",
     "lint:format": "prettier --check src",
     "lint:js": "oxlint src",
     "lint:types": "tsgo --noEmit",
@@ -33,6 +34,7 @@
     "@typescript/native-preview": "^7.0.0-dev.20251227.1",
     "oxlint": "^1.35.0",
     "prettier": "^3.7.4",
+    "unocss": "^66.5.11",
     "vite": "^7.3.0",
     "vitest": "^4.0.16"
   },
