--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "lint:types": "tsc --noEmit"
+    "lint:types": "tsgo --noEmit"
   },
   "dependencies": {
     "preact": "^10.28.1"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
+    "@typescript/native-preview": "^7.0.0-dev.20251227.1",
     "unocss": "^66.5.11",
     "vite": "^7.3.0"
   }
