--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "./src/main.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsgo"
   },
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "@typescript/native-preview": "^7.0.0-dev.20251227.1"
   }
 }
