--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,11 +12,11 @@
   },
   "scripts": {
     "build": "tsdown",
-    "lint:types": "tsc --noEmit"
+    "lint:types": "tsgo --noEmit"
   },
   "devDependencies": {
+    "@typescript/native-preview": "^7.0.0-dev.20251227.1",
     "eslint-plugin-lit": "^2.1.1",
-    "tsdown": "^0.3.1",
-    "typescript": "^5.9.3"
+    "tsdown": "^0.18.3"
   }
 }
