--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "Core library for devtool-configurator",
   "type": "module",
-  "main": "./dist/main.js",
+  "main": "./dist/main.mjs",
   "exports": {
     ".": {
-      "types": "./dist/main.d.ts",
-      "default": "./dist/main.js"
+      "types": "./dist/main.d.mts",
+      "default": "./dist/main.mjs"
     }
   },
   "scripts": {
