feat: basic app

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
     "lint:types": "tsgo --noEmit"
   },
   "dependencies": {
+    "@preact/signals": "^2.5.1",
     "preact": "^10.28.1"
   },
   "devDependencies": {
