--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
     "preact": "^10.28.1"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.50",
     "@typescript/native-preview": "^7.0.0-dev.20251228.1",
     "unocss": "^66.5.11",
     "vite": "^7.3.0"
