--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.2.50",
     "@typescript/native-preview": "^7.0.0-dev.20251228.1",
+    "nanotar": "^0.2.0",
     "unocss": "^66.5.11",
     "vite": "^7.3.0"
   }
